--- a/quizME/package.json
+++ b/quizME/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@babel/core": "^7.10.4",
     "primeflex": "^1.3.1",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.2",
